# rust-snippets

./: README.md
generate_rand/: Cargo.toml
generate_rand/src/: .main.rs.swp  main.rs
httptunnel/: README.md
httptunnel/copying/: .gitignore  Cargo.toml  README.md
httptunnel/copying/config/: config.yml  log4rs.yaml
httptunnel/copying/src/: configuration.rs  http_tunnel_codec.rs  main.rs  proxy_target.rs  relay.rs  tunnel.rs
return_circle_area/: Cargo.toml
return_circle_area/src/: main.rs
rocket_hello_world/: Cargo.toml
rocket_hello_world/src/: .main.rs.swp  main.rs
sort_string/: Cargo.toml
sort_string/src/: main.rs
stdout_stdin/: Cargo.toml  README.md
stdout_stdin/src/: .main.rs.swp  main.rs
