[package]
name = "copying"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log4rs = "1.0.0-alpha-1"
log = "0.4"
derive_builder = "0.9"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
serde_regex = "1.1"